deploy/overlays/okd/backend-serviceaccount-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      serviceAccountName: task-app
