deploy/overlays/okd/postgres-okd-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
          image: quay.io/sclorg/postgresql-18-c9s:latest
          volumeMounts:
            - name: data
              mountPath: /var/lib/pgsql/data
