deploy/overlays/okd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: task-app
spec:
  host: task-app.apps.okd.diploma.test
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
